--- a/css/style.css
+++ b/css/style.css
@@ -6,43 +6,56 @@
     overflow: hidden;
 }
 
+.header1{
+    width:27.5%;
+    background-color: blueviolet;
+    float: left;
+    margin: 0px;
+}
+
+.header2{
+    width:27.5%;
+    background-color: blueviolet;
+    float: right;
+    height: 20vh;
+}
+
 .logo{
     padding: 1vh 5%;
     float: left;
-    width:10%;
-    height:16vh;
+    width:130px;
 }
 
 form{
-    float: right;
-    width: 30%;
+    float: left;
+    width: 45%;
     height: 3vh;
-    padding: 3vh;
-    margin: auto;
+    padding: 3vh 0px;
+    
+    
 }
 
 input[type='search']{
     width: 100%;
-    height: 3vh;
-    border-radius: 5px;
+    height: 40px;
+    border-radius: 7px;
     float: right;
+    border: none;
     }
 
 nav{
-    margin:auto;
+    width: 45%;
+    float: right;  
 }
 ul{
-    width: 60%;
-    margin: 10vh;
+    width: 100%;
 }
-
 li{
     font-family: Arial, Helvetica, sans-serif;
-    color: white;
-    margin: auto;
+    color: black;
     float: right;
     list-style-type: none;
-    width: 12%;
+    width: 20%;
     text-align: center;
     padding-top: 3vh;
 }
@@ -52,7 +65,7 @@ li{
     font-size: 30px;
     float: right;
     padding-top: 5vh;
-    width: 7%;
+    width: 20%;
 }
 
 
