--- a/css/style.css
+++ b/css/style.css
@@ -163,8 +163,9 @@ input[id="3"]:checked ~ .pagination .pagination-item[for="3"]{
     }
 }
 /* ACA TERMINA EL CODIGO DE LOS SLIDES */
-/* PASOS */
 
+
+/* ACA EMPIEZAN LOS PASOS */
 h2{
     font-family: Arial, Helvetica, sans-serif;
     color: grey;
@@ -179,3 +180,54 @@ h2{
 .img-pasos{
     width:100%;
 }
+/* ACA TERMINAN LOS PASOS */
+
+/* ACA EMPIEZAN LAS CARDS */
+.containerCard{
+    width: 100%;
+    max-width: 1200px;
+    height: 430px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: auto;
+}
+
+.containerCard .card{
+    width: 330px;
+    height: 430px;
+    border-radius: 8px;
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
+    margin: 20px;
+    text-align: center;
+    transition: all 0.25s;
+}
+
+.containerCard .card:hover{
+    transform: translateY(-15px);
+    box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
+}
+
+.containerCard .card img{
+    width: 330px;
+    height: 220px;
+}
+
+
+.containerCard .card h4{
+    font-weight: 600;
+}
+
+.containerCard .card p{
+    padding: 0 1rem;
+    font-size: 16px;
+    font-weight: 300;
+}
+
+.containerCard .card a {
+    font-weight: 500;
+    text-decoration: none;
+    color: #3498db;
+}
+/* ACA TERIMNAN LAS CARDS */
