--- a/myapps/views/partials/header.ejs
+++ b/myapps/views/partials/header.ejs
@@ -41,7 +41,7 @@
     </div>
 
     <div class="icono2">
-        <a class="iconos" href="carrito"><i class="fas fa-shopping-cart"></i></a>
+        <a class="iconos" href="/cart"><i class="fas fa-shopping-cart"></i></a>
     </div>
 
 </header>
