--- a/myapps/public/css/addproduct.css
+++ b/myapps/public/css/addproduct.css
@@ -65,6 +65,7 @@
     flex-wrap: wrap;
     
   }
+ 
   
   .product-menu {
     
@@ -80,11 +81,14 @@
   
   .product-images {
     position: relative;
-    padding: 20px;
+    
     background-color: darkgray;
     
   }
   .product-images h2 {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 600;
+    
     color: #fff;
   }
   .product-images p {
@@ -94,13 +98,15 @@
   }
   
   .product-detail {
-    padding-top: 20px;
+    
     background-color: #2ca2ca;
     padding-bottom: 40px;
   }
   
   .product-detail h2 {
     color: #fff;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 600;
   }
   .product-detail p {
     color: azure;
@@ -168,8 +174,36 @@
       font-family: "Montserrat", sans-serif;
     font-size: 14px;
     margin-top: 10px;
-    padding: 20px;
+    margin-bottom: 20px;
+    padding: 10px;
     border-radius: 6px;
     border: 2px solid #114bdf69;
   }
-  
+.input-group{
+  margin-bottom: 10px;
+}
+
+.btn-file {
+  position: relative;
+  overflow: hidden;
+}
+.btn-file input[type=file] {
+  position: absolute;
+  top: 0;
+  right: 0;
+  min-width: 100%;
+  min-height: 100%;
+  font-size: 100px;
+  text-align: right;
+  filter: alpha(opacity=0);
+  opacity: 0;
+  outline: none;
+  background: white;
+  cursor: inherit;
+  display: block;
+}
+
+#img-upload{
+  width: 50%;
+  padding: 5px;
+}
