--- a/myapps/views/cart.ejs
+++ b/myapps/views/cart.ejs
@@ -27,7 +27,7 @@
                     <li class="nav-item col-3 col-lg-1 mt-1">
                         <img src="/images/img-camara-nikon.jpg" class="img-fluid img-thumbnail ounded float-left" alt="Responsive image" alt="notFound" class="rounded-sm">
                     </li>
-                    <li class="nav-link col-6 p-0 p-lg-10">
+                    <li class="nav-link col-5 col-md-6 p-0 p-lg-10">
                         <a href="#" class="text-dark font-weight-bold">Descripcion del producto</a>
                     </li>
                     <li class="nav-item  d-none d-lg-block col-3 text-center">
@@ -37,8 +37,13 @@
                             <button type="button" class="btn btn-secondary">-</button>
                         </div>
                     </li>
-                    <li class="nav-item  col-3 col-lg-2 text-right pr-5">
-                        <a href="" class="text-dark font-weight-bolder">Precio</a>
+                    <li class="nav-item  col-4 col-md-3 col-lg-2 text-center pr-5">
+                            <a href="" class="text-dark font-weight-bolder">$ Precio</a>
+                        <div class="btn-group d-lg-none" role="group" aria-label="Basic example">
+                            <button type="button" class="btn btn-secondary">+</button>
+                            <button type="button" class="btn bg-light"> # </button>
+                            <button type="button" class="btn btn-secondary">-</button>
+                        </div>
                     </li>
                 </ul>
                 <ul id="cartProdNav" class="nav d-none d-lg-flex justify-content-left ml-5">
@@ -59,12 +64,40 @@
         </ul>
     </div>
     </section>
-    <div id="cartLeft">
-
-    </div>
-    <div id="cartRight">
-
-    </div>
+    <section id="main" class="container d-inline">
+        <div id="cartLeft" class="container col-12 col-lg-6 justify-content-end">
+            <p></p>
+        </div>
+        <div id="cartRight" class="col-12 col-md-6 col-lg-4 ml-auto">
+            <div class="container-fluid">
+                <ul class="d-inline-block">
+                    <li class="container d-inline-flex">
+                        <p class="col-6">Subtotal</p>
+                        <p class="col-6 text-right text-dark font-weight-bolder">$ Importe</p>
+                    </li>
+                    <li class="container d-inline-flex">
+                        <p class="col-6">Impuestos</p>
+                        <p class="col-6 text-right text-dark font-weight-bolder">$ Importe</p>
+                    </li>
+                    <li class="container d-inline-flex">
+                        <p class="col-6 text-dark font-weight-bolder">Total</p>
+                        <p class="col-6 text-right text-dark font-weight-bolder">$ Importe</p>
+                    </li>
+                </ul>
+            </div>
+            <div id="cartButtons" class="container p-4 align-items-center">
+                <ul class="container">
+                    <li class="d-inline-block">
+                        <button type="button" class="btn btn-secondary">+ Envios</button>
+                        <button type="button" class="btn btn-secondary">+ Continuar Compra</button>
+                    </li>
+                    <li class="d-inline">
+                        <button type="button" class="btn btn-dark btn-block mt-2">continuar compra</button>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
 
     
 
