--- a/myapps/public/css/indexMF.css
+++ b/myapps/public/css/indexMF.css
@@ -132,49 +132,103 @@ h2{
     border-radius: 3%;
 }
 /* ACA TERMINAN LOS PASOS */
-/* ACA EMPIEZAN LAS CARDS */
-.containerCard{
-    width: 100%;
-    max-width: 100%x;
-    height: 430px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin: auto;
-    font-family: Arial, Helvetica, sans-serif;
-}
-.containerCard .card{
-    width: 210px;
-    height: 430px;
-    border-radius: 8px;
-    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
-    overflow: hidden;
-    margin: 20px;
-    text-align: center;
-    transition: all 0.25s;
-}
-.containerCard .card:hover{
-    transform: translateY(-15px);
-    box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
-}
-.containerCard .card img{
-    width: 330px;
-    height: 220px;
-}
-.containerCard .card h4{
-    font-size: 20px;
-    text-decoration: none;
-}
-.containerCard .descuento{
-    color: chartreuse;
-}
-.containerCard .card p{
-    padding: 0 1rem;
-    font-size: 16px;
-    font-weight: 300;
-    text-decoration: none;
+
+
+/* Fonts */
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap');
+
+/* Variables */
+:root {
+  --yellow: #EAC926;
+  --dark-blue: #03264C;
+  --light-blue: #1259c3;
+  --gray: #666666;
+  --light-gray: #ebebeb;
+  --green: #39b54a;
+  --base-font-family: 'Roboto', sans-serif
 }
 
+/* ACA EMPIEZAN LAS CARDS */
+/* Products */
+.products-wrapper {
+    margin-top: 30px;
+    margin-bottom: 30px;
+  }
+  .products-title {
+    font-size: 2.4em;
+    font-weight: 400;
+    color: var(--gray);
+  }
+  .product-box {
+    background-color: #ffffff;
+    border-radius: 5px;
+    overflow: hidden;
+    transition: 300ms;
+    margin: 20px 0;
+    border: 2px solid var(--gray);
+  }
+  .product-box a {
+    display: block;
+  }
+  .product-box_image {
+    border-bottom: 1px solid var(--light-gray);
+  }
+  .product-box_data {
+    padding: 15px;
+    position: relative;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+  .product-box_data h2 {
+    font-size: 2em;
+    font-weight: 300;
+    padding: 5px;
+    margin: 0;
+  }
+  .product-box_data span {
+    font-size: 1em;
+    font-weight: 300;
+    color: var(--green);
+    margin: 0 0 0 10px;
+  }
+  .product-box_data p {
+    font-size: 1.5em;
+    width: 100%;
+    color: var(--gray);
+    margin: 0;
+    height: 0;
+    transition: 300ms;
+    overflow: hidden;
+  }
+  .product-box_data i {
+    color: var(--green);
+    font-size: 1.8em;
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    border: solid 1px;
+    border-radius: 50%;
+    position: absolute;
+    top: -40px;
+    right: 15px;
+    background-color: #ffffff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: 300ms;
+  }
+  .product-box:hover {
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+  }
+  .product-box:hover p{
+    height: 40px;
+    margin-top: 15px;
+  }
+  .product-box:hover i{
+    transform: rotate(360deg);
+    box-shadow: 0 0 5px var(--green);
+  }
 /* ACA TERIMNAN LAS CARDS */
 
 @media(min-width:768px){
