--- a/myapps/views/index.ejs
+++ b/myapps/views/index.ejs
@@ -4,8 +4,14 @@
 <head>
 	<meta charset="utf-8">
 	<meta name='viewport' content='width=device-width, initial-scale=1.0'>
+    <!-- CSS bootstrap -->
+    <link rel="stylesheet" href="/css/bootstrap-grid.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <!-- CSS propio -->
     <link rel="stylesheet" href="/css/indexMF.css">
+     <!-- CSS header -->
     <link rel="stylesheet" href="/css/header.css">
+    <!-- fontAwesome -->
     <link
 			rel="stylesheet"
 			href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
@@ -24,44 +30,44 @@
 
 <!-- ACA EMPIEZA EL CODIGO DE LOS SLIDES -->
             <div class="body">
-                <div class="container-all"> 
-    
+                <div class="container-all">
+
                     <input type="radio" id="1" name="image-slide" hidden/>
                     <input type="radio" id="2" name="image-slide" hidden/>
                     <input type="radio" id="3" name="image-slide" hidden/>
-            
+
                     <div class="slide">
-            
+
                         <div class="item-slide">
                             <img src="/images/img1.jpg">
                         </div>
-            
+
                         <div class="item-slide">
                             <img src="/images/img2.jpg">
                         </div>
-            
+
                         <div class="item-slide">
                             <img src="/images/img3.jpg">
                         </div>
-            
+
                     </div>
-            
+
                     <div class="pagination">
-                       
+
                         <label class="pagination-item" for="1">
                             <img src="/images/img1.jpg">
                         </label>
-                        
+
                         <label class="pagination-item" for="2">
                             <img src="/images/img2.jpg">
                         </label>
-                        
+
                         <label class="pagination-item" for="3">
                             <img src="/images/img3.jpg">
                         </label>
-                        
+
                     </div>
-                    
+
                 </div>
                </div> 
 <!-- ACA TERMINA EL CODIGO DE LOS SLIDES -->
@@ -86,45 +92,115 @@
                 </div>
 <!-- ACA TERMINAN LOS PASOS -->
 <!-- ACA EMPIEZA EL CÓDIGO LAS CARDS -->
-          <div class="containerCard">
-              <a href="detalleProductos/detail/0/algo">
-                      <div class="card">
-                      <img src="/images/paso1.jpg">
-                      <h4>$999</h4>
-                      <p class="descuento">%50</p>
-                      <p>Cafetera</p>
-                  </div>
-              </a>
-              <a href="detalleProductos/detail/0/algo">
-                 <div class="card">
-                     <img src="/images/img2.jpg">
-                     <h4>Comida</h4>
-                     <p class="descuento">%50</p>
-                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel, excepturi unde?</p>
-                 </div>
-              </a>
-              <a href="detalleProductos/detail/0/algo">
-                 <div class="card">
-                     <img src="/images/img3.jpg">
-                     <h4>Tecnología</h4>
-                     <p class="descuento">%50</p>
-                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel, excepturi unde?</p>
-                 </div>
-              </a>
-              <a href="detalleProductos/detail/0/algo">
-                 <div class="card">
-                     <img src="/images/<%= index[0].image %>">
-                     <h4>$<%= index[0].price %></h4>
-                     <p class="descuento"><%= index[0].discount %>% OFF</p>
-                     <p><%= index[0].description %></p>
-                 </div>
-              </a>
-           </div>
+
+
+<!-- ultima visita -->
+<div class="container products-wrapper">
+    <div class="row">
+        <div class="col-12">
+            <h2 class="products-title">Basado en tu última visita</h2>
+        </div>
+        <% for (product of pdtosVisited) { 
+            let getDiscountPercentage = discount => (100 - discount) / 100;
+            let finalPrice = (product.price * getDiscountPercentage(product.discount)).toFixed(0); 
+        %>
+            <div class="col-12 col-sm-6 col-lg-3">
+                <section class="product-box">
+                    <a href="/products/detail/<%= product.id %>">
+                        <figure class="product-box_image">
+                            <img src="/images/<%= product.image %>" alt="imagen de producto">
+                        </figure>
+                        <article class="product-box_data">
+                            <h2>$<%= thousandGenerator(finalPrice) %></h2>
+                            <span><%= product.discount %>% OFF</span>
+                            <p><%= product.name %></p>
+                            <i class="fas fa-truck"></i>
+                        </article>
+                    </a>
+                </section>
+            </div>
+        <% } %>
+    </div>
+</div>
+<!-- /ultima visita -->
+
+<!-- Ofertas -->
+<div class="container products-wrapper">
+    <div class="row">
+        <div class="col-12">
+            <h2 class="products-title">Ofertas</h2>
+        </div>
+        <div class="col-12 col-sm-6 col-lg-3">
+            <section class="product-box">
+                <a href="">
+                    <figure class="product-box_image">
+                        <img src="/images/img-cafetera-moulinex.jpg" alt="imagen de producto">
+                    </figure>
+                    <article class="product-box_data">
+                        <h2>$6.770</h2>
+                        <span>40% OFF</span>
+                        <p>Cafetera Moulinex Dolce Gusto Lorem ipsum, dolor sit amet.</p>
+                        <i class="fas fa-truck"></i>
+                    </article>
+                </a>
+            </section>
+        </div>
+        <div class="col-12 col-sm-6 col-lg-3">
+            <section class="product-box">
+                <a href="">
+                    <figure class="product-box_image">
+                        <img src="/images/img-macbook-pro-2019.jpg" alt="imagen de producto">
+                    </figure>
+                    <article class="product-box_data">
+                        <h2>$150.970</h2>
+                        <span>10% OFF</span>
+                        <p>Macbook Pro 2019 Lorem ipsum, dolor sit amet.</p>
+                        <i class="fas fa-truck"></i>
+                    </article>
+                </a>
+            </section>
+        </div>
+        <div class="col-12 col-sm-6 col-lg-3">
+            <section class="product-box">
+                <a href="">
+                    <figure class="product-box_image">
+                        <img src="/images/img-tv-samsung-smart.jpg" alt="imagen de producto">
+                    </figure>
+                    <article class="product-box_data">
+                        <h2>$54.230</h2>
+                        <p>Televisor Samsung Smart TV Lorem ipsum, dolor sit amet.</p>
+                        <i class="fas fa-truck"></i>
+                    </article>
+                </a>
+            </section>
+        </div>
+        <div class="col-12 col-sm-6 col-lg-3">
+            <section class="product-box">
+                <a href="">
+                    <figure class="product-box_image">
+                        <img src="/images/img-samsung-galaxy-s10.jpg" alt="imagen de producto">
+                    </figure>
+                    <article class="product-box_data">
+                        <h2>$89.410</h2>
+                        <span>20% OFF</span>
+                        <p>Samsung Galaxy s10 Lorem ipsum, dolor sit amet.</p>
+                        <i class="fas fa-truck"></i>
+                    </article>
+                </a>
+            </section>
+        </div>
+    </div>
+</div>
+<!-- /Ofertas -->
+
 <!-- ACA TERMINA EL CÓDIGO LAS CARDS -->
         </main>
             </div>
 	</div>
-
+<!-- bootsrap -->
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
 
 </html>
