--- a/myapps/views/addProduct.ejs
+++ b/myapps/views/addProduct.ejs
@@ -11,42 +11,32 @@
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
 <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
 <script>
-    $(document).ready( function() {
-    $(document).on('change', '.btn-file :file', function() {
-    var input = $(this),
-        label = input.val().replace(/\\/g, '/').replace(/.*\//, '');
-    input.trigger('fileselect', [label]);
-    });
+    $(function() {
+    // Multiple images preview in browser
+    var imagesPreview = function(input, placeToInsertImagePreview) {
 
-    $('.btn-file :file').on('fileselect', function(event, label) {
-        
-        var input = $(this).parents('.input-group').find(':text'),
-            log = label;
-        
-        if( input.length ) {
-            input.val(log);
-        } else {
-            if( log ) alert(log);
-        }
-    
-    });
-    function readURL(input) {
-        if (input.files && input.files[0]) {
-            var reader = new FileReader();
-            
-            reader.onload = function (e) {
-                $('#img-upload').attr('src', e.target.result);
+        if (input.files) {
+            var filesAmount = input.files.length;
+
+            for (i = 0; i < filesAmount; i++) {
+                var reader = new FileReader();
+
+                reader.onload = function(event) {
+                    $($.parseHTML('<img>')).attr('src', event.target.result).appendTo(placeToInsertImagePreview);
+                }
+
+                reader.readAsDataURL(input.files[i]);
             }
-            
-            reader.readAsDataURL(input.files[0]);
         }
-    }
 
-    $("#imgInp").change(function(){
-        readURL(this);
-    }); 	
+    };
+
+    $('#img-products').on('change', function() {
+        imagesPreview(this, 'div.gallery');
+    });
 });
 </script>
 </head>
@@ -69,7 +59,7 @@
         <div class="product-detail col-sm-10 col-md-5 col-lg-5">
             <h2>NUEVO PRODUCTO</h2>
             <p>Ingrese el detalle del producto que desea agregar</p>
-            <form action="/products/add" method="POST" class="detail" enctype="multipart/form-data">
+            <form id="newProduct" action="/products/add" method="POST" class="detail" enctype="multipart/form-data">
                
                 <input type="text" name="name" placeholder="Nombre del producto">
                 
@@ -77,18 +67,19 @@
              <select id = "category">
                <option selected="true" disabled="disabled" >Selecciona la Categoria</option>
                <option value = "1">Alimentos y Bebidas</option>
-               <option value = "2">Indumentaria</option>
-               <option value = "3">Servicios</option>
-               <option value = "4">Decoración</option>
+               <option value = "2">Tecnologia</option>
+               <option value = "3">Indumentaria</option>
+               <option value = "4">Servicios</option>
+               <option value = "5">Entrenimiento</option>
              </select>
              <textarea name="description" id="" cols="30" rows="5" placeholder="Breve descripcion del producto" ></textarea>
              <input type="number" name="price" placeholder="Precio del Producto">
              <input type="text" name="discount" placeholder="Descuento">
             
-             <label for="img" class="form-label">Cargar imagenes del producto:</label>
-			<input type="file" id="img" name="img" placeholder="Ingresa un avatar para tu perfil" class="file" multiple >
+             
+			<!--<input type="file"  name="img" placeholder="Ingresa un avatar para tu perfil" class="file" multiple id="img" >
            
-            <!-- image-preview-filename input [CUT FROM HERE]
+             image-preview-filename input [CUT FROM HERE]
                          <div class="input-group">
                             <span class="input-group-btn">
                                 <span class="btn btn-default btn-file">
@@ -99,18 +90,22 @@
                         </div>
                         
              <!-- /input-group image-preview [TO HERE]--> 
-            <button type="submit" class="btn-new">CREAR NUEVO PRODUCTO</button>
+             <input type="file" name="img-products" placeholder="Puede cargar hasta 8 fotos" multiple id="img-products">
+            
             </form>
            
         </div> 
        
         <div class="product-images col-sm-11 col-md-5 col-lg-6 ">
-           
+           <div class="caja-galeria">
             <h2>Imagenes del producto</h2>
             <p>Vista previa de las imagenes del producto</p>
-            <img id='img-upload'/>
-            
+            <div class=" gallery"></div>
+            </div>
         </div>
+        <div class="btn-crear col-sm-11 col-md-12 col-lg-12 ">
+            <button type="submit" form="newProduct" class="btn-new">CREAR NUEVO PRODUCTO</button>
+         </div>
        
     </section>
     
