--- a/myapps/views/index.ejs
+++ b/myapps/views/index.ejs
@@ -106,7 +106,7 @@
         %>
             <div class="col-12 col-sm-6 col-lg-3">
                 <section class="product-box">
-                    <a href="/products/detail/<%= product.id %>">
+                    <a href="/detalleProductos/<%= product.id %>">
                         <figure class="product-box_image">
                             <img src="/images/<%= product.image %>" alt="imagen de producto">
                         </figure>
@@ -128,67 +128,28 @@
 <div class="container products-wrapper">
     <div class="row">
         <div class="col-12">
-            <h2 class="products-title">Ofertas</h2>
+            <h2 class="products-title">Basado en tu última visita</h2>
         </div>
-        <div class="col-12 col-sm-6 col-lg-3">
-            <section class="product-box">
-                <a href="">
-                    <figure class="product-box_image">
-                        <img src="/images/img-cafetera-moulinex.jpg" alt="imagen de producto">
-                    </figure>
-                    <article class="product-box_data">
-                        <h2>$6.770</h2>
-                        <span>40% OFF</span>
-                        <p>Cafetera Moulinex Dolce Gusto Lorem ipsum, dolor sit amet.</p>
-                        <i class="fas fa-truck"></i>
-                    </article>
-                </a>
-            </section>
-        </div>
-        <div class="col-12 col-sm-6 col-lg-3">
-            <section class="product-box">
-                <a href="">
-                    <figure class="product-box_image">
-                        <img src="/images/img-macbook-pro-2019.jpg" alt="imagen de producto">
-                    </figure>
-                    <article class="product-box_data">
-                        <h2>$150.970</h2>
-                        <span>10% OFF</span>
-                        <p>Macbook Pro 2019 Lorem ipsum, dolor sit amet.</p>
-                        <i class="fas fa-truck"></i>
-                    </article>
-                </a>
-            </section>
-        </div>
-        <div class="col-12 col-sm-6 col-lg-3">
-            <section class="product-box">
-                <a href="">
-                    <figure class="product-box_image">
-                        <img src="/images/img-tv-samsung-smart.jpg" alt="imagen de producto">
-                    </figure>
-                    <article class="product-box_data">
-                        <h2>$54.230</h2>
-                        <p>Televisor Samsung Smart TV Lorem ipsum, dolor sit amet.</p>
-                        <i class="fas fa-truck"></i>
-                    </article>
-                </a>
-            </section>
-        </div>
-        <div class="col-12 col-sm-6 col-lg-3">
-            <section class="product-box">
-                <a href="">
-                    <figure class="product-box_image">
-                        <img src="/images/img-samsung-galaxy-s10.jpg" alt="imagen de producto">
-                    </figure>
-                    <article class="product-box_data">
-                        <h2>$89.410</h2>
-                        <span>20% OFF</span>
-                        <p>Samsung Galaxy s10 Lorem ipsum, dolor sit amet.</p>
-                        <i class="fas fa-truck"></i>
-                    </article>
-                </a>
-            </section>
-        </div>
+        <% for (product of pdtosInSale) { 
+            let getDiscountPercentage = discount => (100 - discount) / 100;
+            let finalPrice = (product.price * getDiscountPercentage(product.discount)).toFixed(0); 
+        %>
+            <div class="col-12 col-sm-6 col-lg-3">
+                <section class="product-box">
+                    <a href="/detalleProductos/<%= product.id %>">
+                        <figure class="product-box_image">
+                            <img src="/images/<%= product.image %>"alt="imagen de producto">
+                        </figure>
+                        <article class="product-box_data">
+                            <h2>$<%= thousandGenerator(finalPrice) %></h2>
+                            <span><%= product.discount %>% OFF</span>
+                            <p><%= product.name %></p>
+                            <i class="fas fa-truck"></i>
+                        </article>
+                    </a>
+                </section>
+            </div>
+        <% } %>
     </div>
 </div>
 <!-- /Ofertas -->
